--- a/styles/SongList.module.css
+++ b/styles/SongList.module.css
@@ -4,3 +4,10 @@
   gap: 30px;
   padding: 10px 0px 0px 30px;
 }
+
+/* Extra small devices (phones, 520px and down) */
+@media only screen and (max-width: 520px) {
+  .SongList {
+    justify-content: center;
+  }
+}
