--- a/styles/global.less
+++ b/styles/global.less
@@ -1,4 +1,4 @@
-@import "~antd/lib/style/themes/default.less";
+// @import "~antd/lib/style/themes/default.less";
 @import "~antd/dist/antd.less";
 @import "./globals.css";
 
